# hibpcli

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  LICENSE  MANIFEST.in  PACKAGING.rst  README.md  README.rst  packacking.rst  pyproject.toml  requirements-dev.txt  requirements-tests.txt  setup.py  tox.ini
.github/workflows/: main.yml
hibpcli/: .travis.yml  __init__.py  cli.py  exceptions.py  keepass.py  password.py
src/hibpcli/: __init__.py  cli.py  exceptions.py  keepass.py  leaks.py  password.py
tests/: test.kdbx  test_cli.py  test_cli_for_check_keepass.py  test_cli_for_check_password.py  test_keepass.py  test_main_program.py  test_main_programm.py  test_password.py
