[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hibpcli"
author = "Jürgen Gmach"
author-email = "juergen.gmach@goglemail.com"
home-page = "https://github.com/jugmac00/hibpcli"
requires = [
    "click ==7.0",
    "pykeepass == 3.0.2",
    "requests == 2.21.0",
]
requires-python = ">=3.6"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    ]
