[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hibpcli"
author = "Jürgen Gmach"
author-email = "juergen.gmach@goglemail.com"
home-page = "https://github.com/jugmac00/hibpcli"
requires = [
    "click ==7.0",
    "pykeepass == 3.1.1",
    "httpx == 0.7.5",
]
requires-python = ">=3.6"
description-file = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
    ]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=5.2.2",
    "pytest-cov",
]
dev = [
    "pdbpp",
]

[tool.flit.scripts]
hibpcli = "hibpcli.cli:main"
